--- a/templates - copia/base.html
+++ b/templates - copia/base.html
@@ -26,9 +26,11 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="http://localhost:5000/">Inicio</a></li>
-            <li><a href="http://localhost:5000/csv">Aplicación</a></li>
+            <li><a href="http://localhost:5000/csv">cvs</a></li>
+            <li><a href="http://localhost:5000/xlsx">xlsx</a></li>
+            <li><a href="http://localhost:5000/mysql">MySQL</a></li>
           </ul>
-        </div>
+        </div><!--/.nav-collapse -->
       </div>
     </nav>
     {% block content %}
