--- a/templates - copia/index.html
+++ b/templates - copia/index.html
@@ -14,6 +14,6 @@
          <p class="lead">Use la plataforma según su necesidad, desplazandose a través de los links en la barra de navegación superior.<br> En el apartado cvs, podrá subir archivos de esé formato, y así mismo en cada uno de los elementos de la lista de navegación</p>
       </div>
 
-    </div>
+    </div><!-- /.container -->
 
 {% endblock %}
